Stubbed in Table of Contents

--- a/dos33.html
+++ b/dos33.html
@@ -209,8 +209,29 @@ span.todo {
     </style>
 </head>
 <body>
-
 <h1>Apple DOS 3.3C Source Code (HTML Version)</h1>
+
+<h1>0.0 Table of Contents</h1>
+<div class="indent5">
+    <table>
+        <tr><td>1.0 Introduction                                </td></tr>
+        <tr><td>2.0 Assembly Source Code                        </td></tr>
+        <tr><td>3.0 Symbols                                     </td></tr>
+        <tr><td> &nbps; 3.1 Symbols (Alphabetical)              </td></tr>
+        <tr><td> &nbps; 3.2 Symbols (Address)                   </td></tr>
+        <tr><td>2.0 Miscellaneous Information                   </td></tr>
+        <tr><td> &nbps; 2.1 Waste                               </td></tr>
+        <tr><td> &nbps; 2.2 Color-Coded Memory by Source File   </td></tr>
+        <tr><td>3.0 Waste                                       </td></tr>
+        <tr><td> &nbps; 3.1 Wasted Memory                       </td></tr>
+        <tr><td> &nbps; 3.2 Wasted Disk Space                   </td></tr>
+        <tr><td> &nbps; 3.3 Wasted Sectors                      </td></tr>
+        <tr><td>4.0 Acknolwedgements                            </td></tr>
+    </table>
+</div>
+<p>
+
+<h1>1.0 Introduction</h1>
 <br>Transcribed by Michael Pohoreski.
 <br>Latest version on my GitHub: <a href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
 <p>
@@ -8697,6 +8718,18 @@ In contradistinction to the previous example, our new code plus initialized data
 <pre>
 </pre>
 
+<h1>4.0 Acknolwedgements</h1>
+<p>
+Special Thank-You to:
+<ul>
+    <li>Apple Computer, Inc., for releasing the DOS 3.3C Source Code</li>
+    <li>Brutal Deluxe for mirroring the DOS 3.3 PDF Source Code</li>
+    <li>Usenet: <a href="https://groups.google.com/forum/#!forum/comp.sys.apple2">comp.sys.apple2</a></li>
+    <li>Bob SanderCleff for his amazing Applesoft Disassembly</li>
+    <li><a href="http://jamtronix.com/files/applesoft.html">Jamtronix Applesoft Listing</a> -- Your clean HTML was a starting point for this HTML file!</li>
+</ul>
+
+<p>
 Apple ][ Forever!
 
 </body>
@@ -8704,10 +8737,11 @@ Apple ][ Forever!
 
 <!--
 
-Well aren't you a curious hacker!
+Well aren't you a curious hacker(*) !
 
 Here's a trick to boot from Drive 2 :-)
 NOTE: You'll need a DOS that isn't brain dead.
+Look for an upcoming announcement in 2017 in c.s.a2
 
 ; Apple //e
 9600<C600.C700M
@@ -8718,5 +8752,7 @@ NOTE: You'll need a DOS that isn't brain dead.
 9600<C600.C700M
 96xx:
 9600G
+
+(*) Using the original positive meaning 'curiosious benign probing for the sake of learning', before it got hijacked to mean a negative connotation: 'destructive entry.'
 
 -->
