--- a/dos33.html
+++ b/dos33.html
@@ -217,15 +217,15 @@ span.todo {
         <tr><td>1.0 Introduction                                </td></tr>
         <tr><td>2.0 Assembly Source Code                        </td></tr>
         <tr><td>3.0 Symbols                                     </td></tr>
-        <tr><td> &nbps; 3.1 Symbols (Alphabetical)              </td></tr>
-        <tr><td> &nbps; 3.2 Symbols (Address)                   </td></tr>
+        <tr><td> &nbsp; 3.1 Symbols (Alphabetical)              </td></tr>
+        <tr><td> &nbsp; 3.2 Symbols (Address)                   </td></tr>
         <tr><td>2.0 Miscellaneous Information                   </td></tr>
-        <tr><td> &nbps; 2.1 Waste                               </td></tr>
-        <tr><td> &nbps; 2.2 Color-Coded Memory by Source File   </td></tr>
+        <tr><td> &nbsp; 2.1 Waste                               </td></tr>
+        <tr><td> &nbsp; 2.2 Color-Coded Memory by Source File   </td></tr>
         <tr><td>3.0 Waste                                       </td></tr>
-        <tr><td> &nbps; 3.1 Wasted Memory                       </td></tr>
-        <tr><td> &nbps; 3.2 Wasted Disk Space                   </td></tr>
-        <tr><td> &nbps; 3.3 Wasted Sectors                      </td></tr>
+        <tr><td> &nbsp; 3.1 Wasted Memory                       </td></tr>
+        <tr><td> &nbsp; 3.2 Wasted Disk Space                   </td></tr>
+        <tr><td> &nbsp; 3.3 Wasted Sectors                      </td></tr>
         <tr><td>4.0 Acknolwedgements                            </td></tr>
     </table>
 </div>
