Fix missing end tag for note

--- a/dos33.html
+++ b/dos33.html
@@ -834,7 +834,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ; *sigh* Too lazy to add a single empty ';' line seperator before IBVT ???
                                                                                     ; Intentionally adding an empty line as a spacer to improve readability *<b>shock</b>*
                                                                                     ;
-                                                                                    ; *<span class='note'>note</a>* IBVT, AS1VT, and AS2VT are Read-Only (after being relocated to high mem.)
+                                                                                    ; *<span class='note'>note</span>* IBVT, AS1VT, and AS2VT are Read-Only (after being relocated to high mem.)
 1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ;a[-] Integer Basic Vector Table
 1D64:E5 24          069             DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ;b[<a class='line' href='#RELOCTR.292'>2</a>]
 1D66:E3 E3          070             DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ;c[-]
