--- a/dos33.html
+++ b/dos33.html
@@ -24,7 +24,7 @@ Pages done:
 
 -->
 <html>
-<title>Apple DOS 3.3C Source Code (HTML Version)</title>
+<title>Apple DOS 3.3C Source Code (HTML Version by Michael Pohoreski)</title>
 <head>
     <style>
 
@@ -148,7 +148,10 @@ hr {
 */
 }
 
-/* Indent 5% */
+/* Indent 2.5%, 5% */
+.indent2 {
+     padding-left:2.5%;
+}
 .indent5 {
      padding-left:5%;
 }
@@ -157,6 +160,9 @@ hr {
 .n {
     color: #F80;
     font-weight: bold;
+}
+.note {
+    background-color:#FF0; /* yellow */
 }
 .magic { /* hard-coded magic number hack */
     color           :#FFF; /* white on */
@@ -171,8 +177,11 @@ span.page {
 span.patch {
     background-color:#EEC; /* faded yellow */
 }
-span.todo {
+.todo {
     background-color:#FF0; /* yellow */
+}
+.warn {
+    color: #F80; /* Orange */
 }
 
 .c00 { background-color:#Faa; color: #000; }
@@ -212,7 +221,7 @@ span.todo {
 <h1>Apple DOS 3.3C Source Code (HTML Version)</h1>
 
 <h1>0.0 Table of Contents</h1>
-<div class="indent5">
+<div class="indent2">
     <table>
         <tr><td>1.0 Introduction                                </td></tr>
         <tr><td>2.0 Assembly Source Code                        </td></tr>
@@ -232,40 +241,44 @@ span.todo {
 <p>
 
 <h1>1.0 Introduction</h1>
-<br>Transcribed by Michael Pohoreski.
-<br>Latest version on my GitHub: <a href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
+<br>Transcribed and Annotated by Michael Pohoreski.
+<br>Latest version on GitHub: <a href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
 <p>
 The <span class="i">intent</span> of providing this copyrighted source code is
- as a convenience for the curious as a <span class="b">means to learn</span> --
- such as especially how <span class="b">NOT</b> to design a Operating / Disk / File System</span>
- (look for all my <span class="b">*sigh*</span> comments and
- <b><a href="#HNTDAFS1">HNTDAFS</a></b> (How Not to Design a File System), but as they say,
- <span class="i">"Hindsight is 20/20."</span>
+ as a convenience for the curious as a <span class="b">means to learn</span>.
 <p>
-<span class="b">DISCLAIMER:</span> <span class="i">YOU MAY NOT USE THIS FOR
- COMMERCIAL GAIN else you face risking the wrath of Apple's lawyers.</span>
+<b class='warn'>WARNING:</b> DOS 3.3 was written by an amateur.  Reading this source code will probably make you angry at all the <b>dumb shit</b> it does.
+ Look for all my <b>*sigh*</b> comments and
+ <b><a class="dumb" href="#HNTDAFS1">HNTDAFS</a></b> (How NOT to Design a File System) links.
+ Knowing "<b>what to do</b>" is not <i>as</i> important as knowing "<b>What NOT to do</b>."
+ As they say, <span class="i">"Hindsight is 20/20."</span>
+<p>
+<span class="b">DISCLAIMER:</span> <b>YOU MAY NOT USE APPLE'S SOURCE CODE EXCEPT FOR LEARNING</b>
+ else you face risking the wrath of Apple's lawyers.
  Since Apple <span class="i">has already previously released this source code</span>
- I'm assuming it is OK since I'm not presenting anything new
- (well, OK, my commentary, but you get the point.)
+ I'm assuming it is OK to provide a mirror of the information since I'm not presenting anything new
+ (well, OK, my commentary, but you get the point) that isn't already publically available.
 <p>
-Numerous improvements have been made over the original source code listings:
+With that crap out of the way ...
+<p>
+Numerous improvements have been made over the original source code listings!
 <p>
 <ul>
   <li>Hyperlinks to all function labels (blue),                       </li>
   <li>Hyperlinks to all variable labels (green),                      </li>
-  <li>Address and opcodes,                                       </li>
+  <li>Memory address and instruction opcodes,                         </li>
   <li>Added line numbers,                                             </li>
   <li>Cleaned up sloppy vertical alignment (such as (#) clock cycles),</li>
   <li>Added annotation commentary column,                             </li>
   <li>Unindented and color-coded macro sections so they stand out, and</li>
-  <li>Entire listing is now a single continuous page                  </li>
+  <li>Entire listing is now a single continuous page.                 </li>
 </ul>
 <p>
 
 Header Format is:
 
 <pre>
-; === <b class="file">FILENAME</b> - Description, Page <a class="page" name="page0">#</a>, <b class="ts">Track/Sector</b> @ $offset, $<b class='n'>####</b> (Relocated Address in high memory) ===
+; === <b class="file">FILENAME</b> - Description, Page <a class="page" name="page0">#</a>, <b class="ts">Track/Sector</b> @ $offset, $<b class='n'>####</b> (Relocated address in high memory) ===
 </pre>
 
 Line format is:
