Add emphasis to introduction

--- a/dos33.html
+++ b/dos33.html
@@ -255,10 +255,11 @@ span.patch {
 The <span class="i">intent</span> of providing this copyrighted source code is
  as a convenience for the curious as a <span class="b">means to learn</span>.
 <p>
-<b class='warn'>WARNING:</b> DOS 3.3 was written by an amateur.  Reading this source code will probably make you angry at all the <b>dumb shit</b> it does.
+<b class='warn'>WARNING:</b> DOS 3.3 was written by an amateur.
+ <i>Reading this source code will probably make you angry</i> at all the <b>dumb shit</b> it does.
  Look for all my <b>*sigh*</b> comments and
  <b><a class="dumb" href="#HNTDAFS1">HNTDAFS</a></b> (How NOT to Design a File System) links.
- Knowing "<b>what to do</b>" is not <i>as</i> important as knowing "<b>What NOT to do</b>."
+ Knowing "<b>What to do</b>" is not <i>as</i> important as knowing "<b>What NOT to do</b>."
  As they say, <span class="i">"Hindsight is 20/20."</span>
 <p>
 <span class="b">DISCLAIMER:</span> <b>YOU MAY NOT USE APPLE'S SOURCE CODE EXCEPT FOR LEARNING</b>
