--- a/dos33.html
+++ b/dos33.html
@@ -742,7 +742,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1C76:C8 3F          325             DW  <a class="x" href="#SDP1"  >SDP1  </a>                                      ; [7] Start Dos Patch
 1C78:FF 3F          326             DW  <a class="x" href="#EDP1"  >EDP1  </a>                                      ;     End   Dos Patch
 1C7A:1D             327 <a class="d" name="RSPAGE"     id="RSPAGE"     >RSPAGE      </a>DFB &lt;<a class="v" href="#START">START</a>                                      ; [8] (Source) Relocation Start Page $1D00
-1C7B:40             328 <a class="d" name="REPAGE"     id="REPAGE"     >REPAGE      </a>DFB &lt;<a class="v" href="#ENDOFDOS">ENDOFDOS</a>                                   ;     (Source) Relocation End+1 Page $4000
+1C7B:40             328 <a class="d" name="REPAGE"     id="REPAGE"     >REPAGE      </a>DFB &lt;<a class="v" href="#ENDOFDOS">ENDOFDOS</a>                                   ;     (Source) Relocation End+1 Page $4000, <a class='mem' name="_1C7B">wastes</a> 1 bytes; See <a class='v' href='#AEND'>AEND</a>
                     329 ;
 1C7C:00             330 <a class="d" name="NSPAGE"     id="NSPAGE"     >NSPAGE      </a>DFB 0
 1C7D:00             331 <a class="d" name="NEPAGE"     id="NEPAGE"     >NEPAGE      </a>DFB 0
@@ -2935,7 +2935,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2AC1:E8 37          055 <a class="d" name="AIOB"  >AIOB        </a>DW <a class="v" href="#IOB"     >IOB</a>          ; 5-ADR IOB                     ; What happened to 1 .. 4 ??? At RVT, WVT ?
 2AC3:BB 33          056 <a class="d" name="AVTOC" >AVTOC       </a>DW <a class="v" href="#VTOC"    >VTOC</a>         ; 6-ADR VTOC
 2AC5:BB 34          057 <a class="d" name="AVOLDR">AVOLDR      </a>DW <a class="v" href="#VOLDIR"  >VOLDIR</a>       ; 7-ADR VOLDIR
-2AC7:00 40          058 <a class="d" name="AEND"  >AEND        </a>DW <a class="v" href="#ENDOFDOS">ENDOFDOS</a>     ;END OF DOS
+2AC7:00 40          058 <a class="d" name="AEND"  >AEND        </a>DW <a class="v" href="#ENDOFDOS">ENDOFDOS</a>     ;END OF DOS                     ; See <a class='v' href='#REPAGE'>REPAGE</a>
                     059 ;                                                           ; File Manager
 2AC9:7E 33          060 <a class='d' name='CMDVT'>CMDVT       </a>DW GOODIO-1     ; 0-NULL                        ; [0] <a class='mem' name='_2AC9'>wastes</a> 2 bytes
 2ACB:21 2B          061             DW FOPEN-1      ; 1-OPEN FILE                   ; [1]
